Chore: Didn't build from main branch so I am deleting madgwick files

--- a/Core/Src/Drivers/BMI088/BMI088.md
+++ b/Core/Src/Drivers/BMI088/BMI088.md
@@ -2,14 +2,14 @@
 IMU for 6DOF, 16-bit gyro and 16-bit accel
 Going to use SPI because SPI is faster
 Types of methods needed (from top prio to least):
-    - Initiatlization
-    - Reset
-    - Read Gyro
-    - Read Accel
-    - Read timing
-    - Enable Int Handling
-    - Self Test
-    - Set ODR/Range
+    - [] Initiatlization
+    - [] Reset
+    - [] Read Gyro
+    - [] Read Accel
+    - [] Read timing
+    - [] Enable Int Handling
+    - [] Self Test
+    - [] Set ODR/Range
 
 
 We will be reading the sensor data via burst mode, which automatically increments the starting reading address after each byte and ensures
@@ -74,7 +74,6 @@ Accelerometer
     - For the accelerometer ODR (Output Data Rate) we would use somewhere between 200-800 hz ideally (400-800) so we would use Normal or OSR2
 
     - New data interrupt flag can be found in reg ACC_INT_STAT_1 (bit 7), it is set when new data is ready and cleared automatically
-
 
     - Regarding the self test feature:
         - The sensor applies electrostatic force onto the sensor core instead of external accelerations
