Feat: Implemented BMI088 helper functions

--- a/Core/Src/Drivers/BMI088/BMI088.md
+++ b/Core/Src/Drivers/BMI088/BMI088.md
@@ -3,7 +3,7 @@ IMU for 6DOF, 16-bit gyro and 16-bit accel
 Going to use SPI because SPI is faster
 Types of methods needed (from top prio to least):
     - [] Initiatlization
-    - [] Reset
+    - [X] Reset
     - [] Read Gyro
     - [] Read Accel
     - [] Read timing
@@ -164,3 +164,56 @@ Gyroscope
         Both suspend modes are for power saving
 
 
+Initialization Steps
+
+Soft-reset both dies
+
+ACC: write 0xB6 → ACC_SOFTRESET (0x7E), wait ≥1 ms.
+
+GYRO: write 0xB6 → GYRO_SOFTRESET (0x14), wait ≥30 ms.
+
+Exit power-down → Normal
+
+ACC: write 0x04 → ACC_PWR_CTRL (0x7D), wait ≥450 µs.
+
+GYRO: write 0x00 → GYRO_LPM1 (0x11), wait ≥30 ms.
+
+Select STREAM mode (accel)
+
+Read ACC_FIFO_CONFIG_1 (0x48), clear bit0, write back.
+
+Configure ODR / filters / ranges
+
+ACC ODR/LPF: set ACC_CONF (0x40) for ~200–800 Hz (your target 400–800 Hz; Normal or OSR2).
+
+ACC range: set ACC_RANGE (0x41) (e.g., ±16 g; use ±24 g only for self-test).
+
+GYRO ODR/LPF: set GYRO_BANDWIDTH (0x10) to match loop (e.g., ODR ≈ 1 kHz, LPF 100–200 Hz).
+
+GYRO range: set GYRO_RANGE (0x0F) (e.g., 1000–2000 dps).
+
+(Optional) Enable data-ready interrupts
+
+GYRO: write 0x80 → GYRO_INT_CTRL (0x15); set pin properties INT3_INT4_IO_CONF (0x16); map via INT3_INT4_IO_MAP (0x18).
+
+ACC: configure DRDY mapping (then poll ACC_INT_STAT_1 bit7).
+
+(Optional) Latch baseline sensortime
+
+Read ACC_SENSORTIME (0x18–0x1A) (24-bit, 39.0625 µs ticks).
+
+Sanity checks
+
+ACC_ERR_REG (0x02) should be clear; ACC_STATUS (0x03) valid.
+
+GYRO_INT_STAT_1 (0x0A) should show DRDY pulses once running.
+
+Begin burst reads
+
+Accel: burst from 0x12–0x17; discard first dummy byte on read; keep CS low to auto-increment.
+
+Gyro: burst from 0x02–0x07; keep CS low to auto-increment.
+
+(When needed) Run self-test (accel)
+
+Set ±24 g (ACC_RANGE=0x03), ODR=1.6 kHz, normal/avg4 in ACC_CONF, follow your 12-step polarity + timing sequence, then reset or restore settings.
