Feat: Added Accel and Gyro readings, created interrupt driven sampling
	- Created method to read accel and gyro
	- Created semaphore to flag when to read data from ISR
	- Implemented sensor reading to task

--- a/Core/Src/Drivers/BMI088/BMI088.md
+++ b/Core/Src/Drivers/BMI088/BMI088.md
@@ -2,14 +2,14 @@
 IMU for 6DOF, 16-bit gyro and 16-bit accel
 Going to use SPI because SPI is faster
 Types of methods needed (from top prio to least):
-    - [] Initiatlization
-    - [X] Reset
-    - [] Read Gyro
-    - [] Read Accel
-    - [] Read timing
-    - [] Enable Int Handling
+    - [x] Initiatlization
+    - [x] Reset
+    - [x] Read Gyro
+    - [x] Read Accel
+    - [x] Read timing // Don't need this only for FIFO mode not STREAM mode
+    - [x] Enable Int Handling
     - [] Self Test
-    - [] Set ODR/Range
+    - [x] Set ODR/Range
 
 
 We will be reading the sensor data via burst mode, which automatically increments the starting reading address after each byte and ensures
